--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-budget--app",
+  "name": "react-budget-app",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://naseulgee.github.io/react-budget-app/",
